# g4-opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
assets/shaders/: basic.frag  basic.vert
cmake/: FindGLFW3.cmake
dependencies/GLFW/: .gitkeep
dependencies/KHR/: .gitkeep
dependencies/glad/: .gitkeep
include/: .gitkeep
shaders/: basic.frag  basic.vert
src/: _config_debug.hpp  _config_graphics.hpp  _config_logger.hpp  camera.cpp  camera.hpp  chunk.hpp  config.h  constants.hpp  debug.cpp  debug.h  debug.hpp  game_state.cpp  game_state.hpp  gl_debug.cpp  gl_debug.hpp  gl_debug_config.hpp  logger.hpp  logger_config.hpp  logging.h  logging.hpp  main.cpp  math.cpp  math.hpp  mesh.hpp  render.cpp  render.hpp  shader.cpp  shader.h  shader.hpp  transform.hpp  triangle_mesh.cpp  triangle_mesh.h  triangle_mesh.hpp
